# conan-cmake-example

./: CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
apps/: main.cpp
scripts/: build.sh  configure.sh
